[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pelitools"
author = "Matthew Brett"
author-email = "matthew.brett@gmail.com"
classifiers = ["License :: OSI Approved :: BSD License"]
description-file="README.md"
requires = [
    'pelican',
]

[tool.flit.scripts]
pt-newpost = "pelitools.commands:newpost_cmd"
